# lectern

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DESIGN.md  GREY_AREAS.md
docs/adr/: 0001-portable-core-platform-adapters.md  0002-local-first-compute.md  0003-bundle-artifact-format.md  0004-cli-first-gui-deferred.md  0005-roadmap-resequence-watch-deferred.md
schemas/: manifest.schema.json
src/lectern/: __init__.py  automation.py  bundle.py  cli.py  ingest.py
tests/: quality.toml  test_automation.py  test_bundle.py  test_check_codex_review.py  test_cli.py  test_ingest.py  test_public_docs.py  test_public_safety_check.py  test_refresh_codex_review_check.py  test_youtube_integration.py  test_youtube_source.py
tests/fixtures/: generate_synthetic_talk.py  synthetic_talk.transcript.txt
tools/: check_codex_review.py  public_safety_check.py  refresh_codex_review_check.py
