[project]
name = "lectern"
version = "0.0.1"
description = "Turn talks into thought: render recorded talks into analyzable knowledge bundles for humans and agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Logan Rooks" }]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "pyright>=1.1.360",
]
# Stage dependencies land with their milestones (M1+): yt-dlp, faster-whisper,
# mlx-whisper (macOS), scenedetect, etc. Diarization is the `diarize` extra (gated weights).

[project.scripts]
lectern = "lectern.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lectern"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "tools"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires network; excluded from `make verify`"]
addopts = "-m 'not integration'"
